--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -72,12 +72,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Print diff
+        id: get_diff
         uses: actions/github-script@v7
         with:
           script: |
             const diff_url = context.payload.pull_request.diff_url
             const result = await github.request(diff_url)
             console.log(result)
+            core.setOutput('diff', result.data)
             
 
       - name: Set up Python
@@ -94,5 +96,6 @@ jobs:
         id: openai_request
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          PR_DIFF: ${{ steps.get_diff.outputs.diff }}
         run: |
           python scripts/get_completion.py
