--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -100,9 +100,9 @@ jobs:
         run: |
           python scripts/get_completion.py
 
-      # - name: Use completion output
-      #   run: |
-      #     echo "Completion output: ${{ steps.openai_request.outputs.completion_output }}"
+      - name: Use completion output
+        run: |
+          echo "Completion output: ${{ steps.openai_request.outputs.completion_output }}"
 
       - name: Put completion into PR thread
         # if: steps.check_payment.outputs.is_paid == 'true'
@@ -110,7 +110,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const message = ` ${{ steps.openai_request.outputs.completion_output }} `;
+            const message = `${{ steps.openai_request.outputs.completion_output }}`.replace(/\\n/g, '\n');
+;
             github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
