--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -110,11 +110,11 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const message = `${{ steps.openai_request.outputs.completion_output }}`.replace(/\\n/g, '\n');
-            
+            const output = `${{ steps.openai_request.outputs.completion_output }}`;
+            const escapedOutput = output.replace(/`/g, '\\`').replace(/\\n/g, '\n');
             github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: message
+                body: escapedOutput
               });
