--- a/.github/workflows/reward_contributor.yml
+++ b/.github/workflows/reward_contributor.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install requirements
         run: pip install requests python-dotenv
