--- a/.github/workflows/qr_code.yml
+++ b/.github/workflows/qr_code.yml
@@ -54,9 +54,8 @@ jobs:
 
             - checking_id: ${{ steps.extract_values.outputs.checking_id }}
 
-
             ![QR
-            Code](https://github.com/MIT-Bitcoin-2024/gha-tut/blob/master/assets/bitcoin.svg)`; 
+            Code](https://raw.githubusercontent.com/MIT-Bitcoin-2024/gha-tut/8bbcb9053ae5d8b7de29d2f87a747b0f4a5744d6/assets/bitcoin.svg)`; 
 
 
             github.rest.issues.createComment({
