--- a/.github/workflows/anti-spam.yml
+++ b/.github/workflows/anti-spam.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install requirements
-        run: pip install requests python-dotenv
+        run: pip install requests python-dotenv qrcode
 
       - name: Waiting for payment (check PR comments)
         env:
