--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -40,7 +40,13 @@ jobs:
 
       - name: Get artifact URL
         id: artifact_url
-        run: echo "::set-output name=url::$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[0].archive_download_url')"
+        run: |
+          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/actions/artifacts \
+            | jq -r '.artifacts[0].archive_download_url' \
+            | echo "::set-output name=url::$(cat -)"
+            
+        # run: echo "::set-output name=url::$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[0].archive_download_url')"
 
       - name: Put artifact QR url in PR thread
         uses: actions/github-script@v6
