--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -12,6 +12,9 @@ jobs:
   demo_qr:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -45,7 +48,7 @@ jobs:
             https://api.github.com/repos/${{ github.repository }}/actions/artifacts \
             | jq -r '.artifacts[0].archive_download_url' \
             | echo "::set-output name=url::$(cat -)"
-            
+
         # run: echo "::set-output name=url::$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[0].archive_download_url')"
 
       - name: Put artifact QR url in PR thread
