--- a/.github/workflows/open_review.yml
+++ b/.github/workflows/open_review.yml
@@ -9,61 +9,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  demo_qr:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install qrcode
-
-      - name: Run qr_code.py
-        id: run_qr_script
-        run: |
-          python .github/scripts/qr_code.py
-
-      - name: Upload QR code as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: qr-code
-          path: qr_code.png
-
-      - name: Download QR code artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: qr-code
-
-      - name: Get artifact URL
-        id: artifact_url
-        run: |
-          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/actions/artifacts \
-            | jq -r '.artifacts[0].archive_download_url' \
-            | echo "::set-output name=url::$(cat -)"
-
-        # run: echo "::set-output name=url::$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/artifacts | jq -r '.artifacts[0].archive_download_url')"
-
-      - name: Put artifact QR url in PR thread
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `![QR Code](${{ steps.artifact_url.outputs.url }})`
-            github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: output,
-              });
-
+  
   check_that_payment:
     runs-on: ubuntu-latest
     steps:
@@ -147,13 +93,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
 
+      # note: we've checkoud contributors PR code so the script 
+      # in .github can be modified by him
       - name: Run get_completion.py
         id: openai_request
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           PR_DIFF: ${{ steps.get_diff.outputs.diff }}
-        run: |
-          python scripts/get_completion.py
+        working-directory: .github/scripts
+        run: python get_completion.py
 
       - name: Use completion output
         run: |
